--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="mobile-web-app-capable" content="yes">
-<title>FreezeTrack</title>
+<title>FreezeTrack v.1.0.0</title>
 <link rel="manifest" href="manifest.json">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -727,7 +727,7 @@ const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBh
 // =============================================================
 
 // Validazione configurazione
-const isConfigured = SUPABASE_URL !== 'https://YOUR_PROJECT_ID.supabase.co' && SUPABASE_ANON_KEY !== 'YOUR_ANON_KEY';
+const isConfigured = SUPABASE_URL !== 'https://jiinpzffsksjhghokkpj.supabase.co' && SUPABASE_ANON_KEY !== 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImppaW5wemZmc2tzamhnaG9ra3BqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA1NjA5NzQsImV4cCI6MjA4NjEzNjk3NH0.562Alvk9BCbWC9m-URuonR6FkrrfQiVAXrcnvPQT_rY';
 
 let sb = null;
 try {
