Update app version in index.html

--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@ body { font-family:var(--font-body); background:var(--bg-deep); color:var(--text
 <div class="auth-screen" id="authScreen">
   <div class="auth-card">
     <div class="logo">❄️</div>
-    <h1>FreezeTrack</h1>
+    <h1>FreezeTrack ver. 1.0.0</h1>
     <p class="subtitle">Gestisci i tuoi congelatori e frigoriferi</p>
     <div class="auth-error" id="authError"></div>
     <div class="auth-success" id="authSuccess"></div>
@@ -556,7 +556,7 @@ body { font-family:var(--font-body); background:var(--bg-deep); color:var(--text
 <div class="app" id="app" style="display:none">
   <header class="header">
     <div class="header-left">
-      <h1>❄️ FreezeTrack</h1>
+      <h1>❄️ FreezeTrack ver. 1.0.0</h1>
       <div class="sync-dot" id="syncDot" title="Stato sincronizzazione"></div>
     </div>
     <div class="header-right">
