--- a/FreezeTrack-Supabase.html
+++ b/FreezeTrack-Supabase.html
@@ -7,7 +7,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="mobile-web-app-capable" content="yes">
-<title>FreezeTrack v.1.0.0</title>
+<title>FreezeTrack ver. 1.0.0</title>
 <link rel="manifest" href="manifest.json">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -538,7 +538,7 @@ body { font-family:var(--font-body); background:var(--bg-deep); color:var(--text
 <div class="auth-screen" id="authScreen">
   <div class="auth-card">
     <div class="logo">❄️</div>
-    <h1>FreezeTrack</h1>
+    <h1>FreezeTrack ver. 1.0.0</h1>
     <p class="subtitle">Gestisci i tuoi congelatori e frigoriferi</p>
     <div class="auth-error" id="authError"></div>
     <div class="auth-success" id="authSuccess"></div>
@@ -556,7 +556,7 @@ body { font-family:var(--font-body); background:var(--bg-deep); color:var(--text
 <div class="app" id="app" style="display:none">
   <header class="header">
     <div class="header-left">
-      <h1>❄️ FreezeTrack</h1>
+      <h1>❄️ FreezeTrack ver. 1.0.0</h1>
       <div class="sync-dot" id="syncDot" title="Stato sincronizzazione"></div>
     </div>
     <div class="header-right">
