--- a/FreezeTrack-Supabase.html
+++ b/FreezeTrack-Supabase.html
@@ -7,7 +7,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="mobile-web-app-capable" content="yes">
-<title>FreezeTrack ver. 1.0.0</title>
+<title>FreezeTrack</title>
 <link rel="manifest" href="manifest.json">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -538,7 +538,7 @@ body { font-family:var(--font-body); background:var(--bg-deep); color:var(--text
 <div class="auth-screen" id="authScreen">
   <div class="auth-card">
     <div class="logo">❄️</div>
-    <h1>FreezeTrack ver. 1.0.0</h1>
+    <h1>FreezeTrack</h1>
     <p class="subtitle">Gestisci i tuoi congelatori e frigoriferi</p>
     <div class="auth-error" id="authError"></div>
     <div class="auth-success" id="authSuccess"></div>
@@ -556,7 +556,7 @@ body { font-family:var(--font-body); background:var(--bg-deep); color:var(--text
 <div class="app" id="app" style="display:none">
   <header class="header">
     <div class="header-left">
-      <h1>❄️ FreezeTrack ver. 1.0.0</h1>
+      <h1>❄️ FreezeTrack</h1>
       <div class="sync-dot" id="syncDot" title="Stato sincronizzazione"></div>
     </div>
     <div class="header-right">
@@ -726,11 +726,15 @@ const SUPABASE_URL = 'https://jiinpzffsksjhghokkpj.supabase.co';
 const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImppaW5wemZmc2tzamhnaG9ra3BqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA1NjA5NzQsImV4cCI6MjA4NjEzNjk3NH0.562Alvk9BCbWC9m-URuonR6FkrrfQiVAXrcnvPQT_rY';
 // =============================================================
 
-// Validazione configurazione
-const isConfigured = SUPABASE_URL !== 'https://jiinpzffsksjhghokkpj.supabase.co' && SUPABASE_ANON_KEY !== 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImppaW5wemZmc2tzamhnaG9ra3BqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA1NjA5NzQsImV4cCI6MjA4NjEzNjk3NH0.562Alvk9BCbWC9m-URuonR6FkrrfQiVAXrcnvPQT_rY';
+// Validazione configurazione — controlla che URL e key siano stati modificati
+const isConfigured = SUPABASE_URL.length > 30 && SUPABASE_ANON_KEY.length > 30
+  && !SUPABASE_URL.includes('YOUR_PROJECT') && !SUPABASE_ANON_KEY.includes('YOUR_ANON');
+
 let sb = null;
 try {
-  sb = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+  if (isConfigured) {
+    sb = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+  }
 } catch(e) {
   console.error('Errore creazione client Supabase:', e);
 }
