--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@ body { font-family:var(--font-body); background:var(--bg-deep); color:var(--text
 <div class="auth-screen" id="authScreen">
   <div class="auth-card">
     <div class="logo">❄️</div>
-    <h1>FreezeTrack</h1>
+    <h1>FreezeTrack 12-02-2026</h1>
     <p class="subtitle">Gestisci i tuoi congelatori e frigoriferi</p>
     <div class="auth-error" id="authError"></div>
     <div class="auth-success" id="authSuccess"></div>
@@ -718,6 +718,7 @@ body { font-family:var(--font-body); background:var(--bg-deep); color:var(--text
 <div class="toast" id="toast"></div>
 
 <script>
+// =============================================================
 // =================== CONFIGURAZIONE SUPABASE =================
 // =============================================================
 // 👇 SOSTITUISCI con i tuoi valori da Supabase Dashboard → Settings → API
